# detector_ano

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: README.md
benchmarks/: deep_compare.py  fetch_nab.sh  fetch_ucr.sh  nab_eval.py  tune.py  ucr_eval.py
docs/: ARCHITECTURE.md
samples/: finance.answer.json  finance.csv  sensor.answer.json  sensor.csv  web_traffic.answer.json  web_traffic.csv
scripts/: analyze.py  make_samples.py  run_benchmarks.sh  verify.py
src/anomaly_detector/: __init__.py  cli.py  core.py  deep.py  detect.py  formatting.py  interface.py  llm.py  loader.py  profile.py  query.py  reasoning.py
src/anomaly_detector/web/: app.py
src/anomaly_detector/web/templates/: index.html
tests/: test_core.py  test_deep.py  test_detect.py  test_interface.py  test_llm.py  test_loader.py  test_matrix.py  test_profile.py  test_query.py  test_reasoning.py  test_web.py
